# DEM-Engine

./: .gitmodules  Dockerfile
src/DEM/: API.h  APIPrivate.cpp  APIPublic.cpp  AuxClasses.cpp  dT.cpp
src/core/utils/: GpuManager.cpp  GpuManager.h  JitHelper.cpp  ManagedAllocator.hpp
src/demo/: CMakeLists.txt  DEMdemo_SingleSphereCollide.cpp
